--- a/quiz/src/main/res/values/strings.xml
+++ b/quiz/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="quiz" translatable="false">Quiz</string>
+    <string name="correct" translatable="false">Correct</string>
+    <string name="wrong" translatable="false">Wrong</string>
+    <string name="continue_button" translatable="false">Continue</string>
+    <string name="score_message" translatable="false"> Congrats! Your score: %1$s</string>
+    <string name="counter" translatable="false">%1$s/%2$s</string>
+    <string name="error_global_msg" translatable="false">We have some problems. Please check network connection.</string>
 </resources>
